--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,63 @@
+@import url(https://fonts.googleapis.com/css?family=Lobster);
+
+body {
+  background-size: cover;
+  background-color: #F54949;
+  background: -webkit-linear-gradient(left top, #F54949, #F2C5AC);
+}
+.jumbotron {
+  background-image: url(../img/pigs.jpg);
+  opacity: .5;
+  background-size: cover;
+}
+ .jumbotron h1 {
+  z-index: 4 initial;
+  color: white;
+  font-family: 'Lobster', cursive;
+  font-weight: bold;
+  position: relative;
+}
 .highlight {
-  background-color: blue;
+  background: -webkit-linear-gradient(left,rgba(255,0,0,0),rgba(255,0,0,1));
   color: white;
 }
+#player-one-total, #player-two-total, #player-computer-total {
+  text-align: center;
+  font-family: 'Lobster', cursive;
+}
 
+#player-computer-score {
+  display: none;
+}
+
+.player {
+  text-align: center;
+  color: white;
+  font-family: 'Lobster', cursive;
+}
+.choose-button  {
+  min-width: 100vw;
+  min-height: 60px;
+  text-align: center;
+}
+
+
+#running{
+  min-height: 100px;
+  text-align: center;
+  font-family: 'Lobster', cursive;
+  color: white;
+}
 button {
   display:inline-block;
+  margin: 9px 0px 9px 0px;
+  background-color: #0D9E83;
+  min-width: 90px;
+  min-height: 50px;
+}
+.btn{
+  font-size: 2em;
+  color: #F2BBBB;
 }
 .dice-images {
   max-width: 400px;
@@ -17,8 +70,8 @@ button {
 }
 
 #dice-roll {
-  min-height: 500px;
-  margin-bottom: 50px;
+  min-height: 400px;
+  margin-bottom: 20px;
 }
 
 #player-one-score, #player-two-score {
